# melba-stt

./: .gitignore  Cargo.toml  README.md  WS_SCHEMA.md  bot.example.toml  bot.toml  secrets.example.toml
bot/: Cargo.toml
bot/src/: config.rs  discord.rs  lib.rs  main.rs  stream.rs  ws.rs
nn/: Cargo.toml
nn/src/: iterator.rs  lib.rs  model.rs  whisper.rs
recorder/: Cargo.toml
recorder/src/: lib.rs
src/: audio.rs  config.rs  discord.rs  lib.rs  main.rs  nn.rs  ws.rs
src/nn/: model.rs  w_reimpl.rs
