[package]
name = "melba-stt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3.0"
candle-nn = "0.3.0"
candle-transformers = "0.3.0"
dashmap = "5.5.3"
futures = "0.3.28"
hf-hub = { version = "0.3.2", features = ["tokio"] }
rand = "0.8.5"
samplerate = "0.2.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
serenity = { version = "0.11.7", default-features = false, features = [
    "builder",
    "cache",
    "time",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "voice",
] }
songbird = { version = "0.3.2", features = ["tokio"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde", "serde-well-known"] }
tokenizers = "0.14.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
toml = "0.8.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
default = ["cuda", "cudnn"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
