[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
nn = { path = "../nn" }
recorder = { path = "../recorder" }

dashmap = "5.5.3"
itertools = "0.12.0"
num-complex = "0.4.4"
realfft = "3.3.0"
rubato = "0.14.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = { version = "3.4.0", features = ["time_0_3"] }
serenity = { version = "0.12.0", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
    "voice",
] }
songbird = { version = "0.4.0", features = ["receive", "driver"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
time = "0.3.30"
tokio-tungstenite = "0.21.0"

[features]
default = ["cuda", "cudnn"]
cuda = ["nn/cuda"]
cudnn = ["nn/cudnn"]
