[package]
name = "nn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.3.1"
candle-nn = "0.3.1"
candle-transformers = "0.3.1"
hf-hub = { version = "0.3.2", features = ["tokio"] }
rand = "0.8.5"
serde_json = "1.0.108"
thiserror = "1.0.50"
tokenizers = "0.15.0"
tokio = { version = "1.34.0", features = ["io-std"] }

[features]
default = ["cuda", "cudnn"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
